--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,19 @@
-html
-  head
-    title= title
-  body
-    h1= message
+extends layout
+
+block content
+  h1= title
+  p Welcome to GUYM, a very basic Express website developed as a tutorial example on the Mozilla Developer Network.
+
+  h1 Dynamic content
+
+  if error
+    p Error getting dynamic content.
+  else
+    p The library has the following record counts:
+
+    - let files = fileInfo.Contents
+    ul  
+      each file in files.length ? files : ['NO!!!']
+        li=  file.Key
+
+      
