list audio tags built

--- a/views/download.pug
+++ b/views/download.pug
@@ -13,7 +13,7 @@ block content
 
    
       
-    audio(preload="auto", autobuffer, controls)  
-      source(src="downloadedFile.Body" type="audio/mp3")
+    audio(preload="auto", loop, autoplay, controls, src="download")  
+      
 
       
