--- a/views/list.pug
+++ b/views/list.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1= title
-  p Welcome to UPLOAD GUY, a very basic Express website developed as a tutorial example on the Mozilla Developer Network.
+  p Welcome to Flame Keeper
 
   h1 Dynamic content
 
