--- a/views/layout.pug
+++ b/views/layout.pug
@@ -20,6 +20,10 @@ html(lang='en')
                 a(href='/list') List
               li 
                 a(href='/upload') Upload
+              li 
+                a(href='/dashboard') Dashboard
+              li 
+                a(href='/download') Download
                 
         div(class='col-sm-10')
           block content
