fixed redirect issue

--- a/views/upload.pug
+++ b/views/upload.pug
@@ -12,5 +12,5 @@ block content
     p UPLOAD STUFF:
     form(method="POST" action="/upload" id="uploadForm" encType="multipart/form-data")
       input(type="file" name="theUpload")
-      input(type="submit" form="uploadForm" value="Submit")
+      input(type="submit" form="uploadForm" value="Submit" onclick="window.loacation.href = ")
 
