--- a/views/index.pug
+++ b/views/index.pug
@@ -10,6 +10,7 @@ block content
     p Error getting dynamic content.
   else
     p The library has the following record counts:
+    - console.log(files.lastModified);
 
       
     audio(preload="auto", autobuffer, controls)  
