dashboard and upload beginning built

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -10,9 +10,9 @@ block content
     p Error getting dynamic content.
   else
     p UPLOAD STUFF:
-    form(method="POST" action="/upload" id="uploadForm" encType="multipart/form-data")      
-      input(type="file" name="theUpload")
-      input(type="submit" form="uploadForm" value="UPLOAD")
+    form(method="POST" action="/upload" id="uploadForm" encType="multipart/form-data" target="_blank")         
+      input(type="file" name="theUpload")                  
+      input(type="submit" form="uploadForm" value="UPLOAD")         
   br
   br
 
@@ -21,15 +21,25 @@ block content
   else
     p The library has the following files:
 
-    - let returns = fileInfo.Contents.reverse();
-    - let files = returns.slice(0,7);
+    - let returns = fileInfo.Contents
+    - let returnsReversed = returns.reverse();
+    - let files = returnsReversed.slice(0,7);
+    - let lastUpload = returns[returns.length - 1]; 
+        
         
     div
-    each file in files ? files : ['NO!!!']      
+    each file in files ? files : ['NO!!!']   
+      - let audioSrc = `https://fk-audio.s3.amazonaws.com/${file.Key}`                   
       p= file.Key
-      p= file.LastModified        
-      form(method="GET" action="/download" id="dashboardForm" encType="multipart/form-data")                  
-        input(type="checkbox" name="theDownload" checked="true" multiple)
-    input(type="submit" form="dashboardForm" value="Submit")
+      p= file.LastModified              
+      form(method="GET" action="/" id="launchForm")                  
+        input(type="checkbox" checked="true" multiple)
+        audio(controls, type="audio/mpeg" src=audioSrc)
+    input(type="submit" form="launchForm" value="Submit")
+
+    - let uploadSrc = `https://fk-audio.s3.amazonaws.com/${lastUpload.Key}`
+    div
+      audio(controls, type="audio/mpeg" src=uploadSrc)
+      
           
       
