--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -25,19 +25,20 @@ block content
     - let returnsReversed = returns.reverse();
     - let files = returnsReversed.slice(0,7);
     - let lastUpload = returns[returns.length - 1];
+
             
         
-    div
-    form(method="POST" action=`/replace/${lastUpload.Key}?_method=PUT` id="launchForm" encType="multipart/form-data" target="_blank")                          
+    div    
     each file in files ? files : ['NO!!!']   
       - let audioSrc = `https://fk-audio.s3.amazonaws.com/${file.Key}`                     
-      p= file.Key
-      p= file.LastModified
-      li(class="listy" id=file.Key)            
-        audio(controls, type="audio/mpeg" src=audioSrc class="audioElement")
-        input(type="checkbox" id="audioCheck")
-    input(type="submit" form="launchForm" value="REPLACE")
-    button(onclick="checkChecks()") CHECK IT!
+      form(method="POST" action=`/replace/${file.Key}?_method=PUT` id="launchForm" encType="multipart/form-data" target="_blank")                          
+        p= file.Key
+        p= file.LastModified
+        li(class="listy" id=file.Key)            
+          audio(controls, type="audio/mpeg" src=audioSrc class="audioElement")
+          input(type="checkbox" id="audioCheck")
+      input(type="hidden" name="checked")    
+      input(type="submit" form="launchForm" value="REPLACE")      
     
     
     - let uploadSrc = `https://fk-audio.s3.amazonaws.com/${lastUpload.Key}`
@@ -54,7 +55,7 @@ block content
 
     script.
       
-      let persistData;            
+               
       function checkChecks(){
       // Query for only the checked checkboxes and put the result in an array
       let checked = Array.prototype.slice.call(document.querySelectorAll("input[type='checkbox']:checked"));      
