--- a/views/index.pug
+++ b/views/index.pug
@@ -1,16 +1,9 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to Flame Keeper
-
-  h1 Dynamic content
-
   if error
     p Error getting dynamic content.
   else
-    p The library has the following record counts:
-
     - let returns = fileInfo.Contents
     - let returnsReversed = returns.reverse();
     - let files = returnsReversed.slice(0,7);
@@ -18,29 +11,77 @@ block content
         
     div(id="waveform")
     each file in files ? files : ['NO!!!']
-      - let audioSrc = `https://fk-audio.s3.amazonaws.com/${file.Key}`           
-      p= file.Key
-      p= file.LastModified
-        audio(controls="", type="audio/mpeg" src=audioSrc)
+      - console.log(file.Key);
+      //- - let audioSrc = `https://fk-audio.s3.amazonaws.com/${file.Key}`           
+      //- p= file.Key
+      //- p= file.LastModified
+      //-   audio(controls="", type="audio/mpeg" src=audioSrc)
 
     script.
-      let returns = '!{JSON.stringify(fileInfo.Contents[0].Key)}';
-      console.log(returns);
+
+      let returns0 = `!{JSON.stringify(fileInfo.Contents[0].Key)}`;
+      let returns1 = `!{JSON.stringify(fileInfo.Contents[1].Key)}`;
+      let returns2 = `!{JSON.stringify(fileInfo.Contents[2].Key)}`;
+      let returns3 = `!{JSON.stringify(fileInfo.Contents[3].Key)}`;
+      let returns4 = `!{JSON.stringify(fileInfo.Contents[4].Key)}`;
+      let returns5 = `!{JSON.stringify(fileInfo.Contents[5].Key)}`;
+      let returns6 = `!{JSON.stringify(fileInfo.Contents[6].Key)}`;
+      console.log(returns0, returns1, returns2, returns3, returns4, returns5, returns6);
 
       
-      //- let returnsReversed = '!{returns.reverse()}';
-      //- console.log(returnsReversed)
-      //- let files = returnsReversed.slice(0,7);
-      //- let lastUpload = returns[returns.length - 1];
       
-      let wavesurfer = WaveSurfer.create({
+      let wavesurfer0 = WaveSurfer.create({
         container: '#waveform'
       });
-      
-      wavesurfer.load(`https://fk-audio.s3.amazonaws.com/${returns.slice(1, -1)}`);
-      wavesurfer.on('ready', function() {
-        wavesurfer.play();
-      })
-            
+      wavesurfer0.load(`https://fk-audio.s3.amazonaws.com/${returns0.slice(1, -1)}`);
+      wavesurfer0.on('ready', function() {
+        wavesurfer0.play();
+      });
 
+      let wavesurfer1 = WaveSurfer.create({
+        container: '#waveform'
+      });      
+      wavesurfer1.load(`https://fk-audio.s3.amazonaws.com/${returns1.slice(1, -1)}`);
+      wavesurfer1.on('ready', function() {
+        wavesurfer1.play();
+      });
       
+      let wavesurfer2 = WaveSurfer.create({
+        container: '#waveform'
+      });      
+      wavesurfer2.load(`https://fk-audio.s3.amazonaws.com/${returns2.slice(1, -1)}`);
+      wavesurfer2.on('ready', function() {
+        wavesurfer2.play();
+      });
+
+      let wavesurfer3 = WaveSurfer.create({
+        container: '#waveform'
+      });      
+      wavesurfer3.load(`https://fk-audio.s3.amazonaws.com/${returns3.slice(1, -1)}`);
+      wavesurfer3.on('ready', function() {
+        wavesurfer3.play();
+      });
+
+      let wavesurfer4 = WaveSurfer.create({
+        container: '#waveform'
+      });      
+      wavesurfer4.load(`https://fk-audio.s3.amazonaws.com/${returns4.slice(1, -1)}`);
+      wavesurfer4.on('ready', function() {
+        wavesurfer4.play();
+      });
+
+      let wavesurfer5 = WaveSurfer.create({
+        container: '#waveform'
+      });      
+      wavesurfer5.load(`https://fk-audio.s3.amazonaws.com/${returns5.slice(1, -1)}`);
+      wavesurfer5.on('ready', function() {
+        wavesurfer5.play();
+      });
+
+      let wavesurfer6 = WaveSurfer.create({
+        container: '#waveform'
+      });      
+      wavesurfer6.load(`https://fk-audio.s3.amazonaws.com/${returns6.slice(1, -1)}`);
+      wavesurfer6.on('ready', function() {
+        wavesurfer6.play();
+      });
