--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,468 @@
-.sidebar-nav {
-    margin-top: 20px;
-    padding: 0;
-    list-style: none;
+@charset "utf-8";
+/* Global Styles */
+
+.css-selector {
+    background: linear-gradient(234deg, #195646, #203558, #45541e, #3b165a, #5f3d1b, #691636, #175867, #564f15, #1a4352, #1c4a5c, #5c411c, #5c1c54, #193b63);
+    background-size: 1600% 1600%;
+
+    -webkit-animation: AnimationName 259s ease infinite;
+    -moz-animation: AnimationName 259s ease infinite;
+    -o-animation: AnimationName 259s ease infinite;
+    animation: AnimationName 259s ease infinite;
+}
+
+@-webkit-keyframes AnimationName {
+    0%{background-position:0% 97%}
+    50%{background-position:100% 4%}
+    100%{background-position:0% 97%}
+}
+@-moz-keyframes AnimationName {
+    0%{background-position:0% 97%}
+    50%{background-position:100% 4%}
+    100%{background-position:0% 97%}
+}
+@-o-keyframes AnimationName {
+    0%{background-position:0% 97%}
+    50%{background-position:100% 4%}
+    100%{background-position:0% 97%}
+}
+@keyframes AnimationName { 
+    0%{background-position:0% 97%}
+    50%{background-position:100% 4%}
+    100%{background-position:0% 97%}
+}
+
+body {
+	margin-left: auto;
+	margin-right: auto;
+	width: 92%;
+	max-width: 960px;
+	padding-left: 2.275%;
+	padding-right: 2.275%;
+}
+/* Header */
+header {
+	text-align: center;
+	display: block;
+}
+header .profileLogo .logoPlaceholder {
+
+	width: 350px;
+	text-align: center;
+}
+header .logoPlaceholder img {
+	max-width: 350px;	
+	opacity: 0.5;
+}
+header .logoPlaceholder span {
+	width: 80px;
+	height: 22px;
+	font-family: 'Rubik', sans-serif;
+	color: rgba(255,255,255,1.00);
+	font-size: 30px;
+	font-weight: 700;
+	line-height: 53px;
+}
+header .profilePhoto img {
+	width: 100px;
+	height: 100px;
+}
+header .profilePhoto {
+	width: 100px;
+	border-radius: 50%;
+	height: 100px;
+	clear: both;
+}
+header .profileHeader a {
+	color: rgba(255,255,255,0.50);
+}
+header .profileHeader h1 {
+	font-family: 'Rubik', sans-serif;
+	color: rgba(255,255,255,0.50);
+	font-size: 1.3em;
+	font-weight: 700;
+	line-height: 14px;
+}
+header .profileHeader h3 {
+	font-family: 'Rubik', sans-serif;
+	color: rgba(255,255,255,0.50);
+	font-size: 1em;
+	font-weight: 200;
+	line-height: 14px;
+}
+hr {
+	background-color: rgba(255,255,255,0.30);
+	height: 2px;
+	border: 0px;
+}
+header .profileHeader p {
+	font-family: 'Rubik', sans-serif;
+	color: rgba(255,255,255,0.50);
+	font-size: 1.1em;
+	font-weight: 300;
+	line-height: 1.8;
+	overflow-y: auto;
+}
+.mainContent .socialNetworkNavBar .sectionContent {
+	float: left;
+	display: inline-block;
+}
+
+.mainContent .socialNetworkNavBar {
+	text-align: left;
+	display: inline-block;
+	margin-top: 60px;
+	margin-bottom: 40px;
+}
+.mainContent .socialNetworkNavBar .socialNetworkNav {
+	border-radius: 50%;
+	cursor: pointer;
+}
+.mainContent .socialNetworkNavBar .socialNetworkNav img:hover {
+	opacity: 0.5;
+}
+/* Main Content sections */
+.mainContent .section1 {
+	padding-top: 30px;
+}
+.mainContent .section1 {
+	display: block;
+}
+.section1 .sectionTitle, .section2 .sectionTitle {
+	font-family: 'Rubik', sans-serif;
+	color: rgba(255,255,255,0.50);
+	font-size: 1.2em;
+	font-weight: 700;
+	text-transform: uppercase;
+}
+.section1 .sectionTitleRule, .section2 .sectionTitleRule {
+	margin: 0 3% 0 0;
+	float: left;
+	clear: both;
+}
+.section1 .sectionTitleRule2, .section2 .sectionTitleRule2 {
+	background-color: rgba(255,255,255,0.30);
+	height: 2px;
+	border: 0px;
+}
+.mainContent .section1 .section1Content {
+	font-family: 'Rubik', sans-serif;
+	font-size: 14px;
+	font-weight: 100;
+	color: rgba(255,255,255,0.50);
+}
+.mainContent .section1 .section1Content span {
+	color: rgba(255,255,255,0.50);
+	font-family: 'Rubik', sans-serif;
+}
+.section2 .sectionContentTitle, .section1 .sectionContentTitle, .socialNetworkNav .sectionContentTitle {
+	font-family: 'Rubik', sans-serif;
+	color: rgba(255,255,255,0.50);
+	font-size: 1.8em;
+	font-weight: 700;
+}
+.section2 .sectionContentSubTitle, .section1 .sectionContentSubTitle, .socialNetworkNav .sectionContentSubTitle {
+	font-family: 'Rubik', sans-serif;
+	color: rgba(255,255,255,0.50);
+	font-size: 1.0em;
+	font-weight: 400;
+}
+.section2 .sectionContent, .section1 .sectionContent, .socialNetworkNav .sectionContent {
+	font-family: 'Rubik', sans-serif;
+	color: rgba(255,255,255,0.50);
+	font-size: 1.2em;
+	font-weight: 400;
+	line-height: 1.8;
+}
+.mainContent {
+	display: block;
+}
+.mainContent .externalResourcesNav .externalResources {
+	background-color: rgba(208,207,207,1.00);
+	display: inline-block;
+	text-align: center;
+	margin-top: 0px;
+	padding-top: 3%;
+	cursor: pointer;
+}
+.mainContent .externalResourcesNav .externalResources:hover {
+	background-color: rgba(153,153,153,1.00);
+}
+.externalResourcesNav .externalResources a {
+	font-family: 'Rubik', sans-serif;
+	color: rgba(255,255,255,1.00);
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 18px;
+	text-decoration: none;
+}
+.stretch {
+	content: '';
+	display: inline-block;
+	margin-left: 2%;
+	margin-right: 2%;
+}
+/* Footer */
+footer .footerDisclaimer {
+	font-family: 'Rubik', sans-serif;
+	font-size: 14px;
+	line-height: 18px;
+	color: rgba(255,255,255,0.50);
+	font-weight: 700;
+}
+footer .footerDisclaimer span {
+	color: rgba(255,255,255,0.50);
+	font-weight: 400;
+}
+footer .footerNote {
+	font-family: 'Rubik', sans-serif;
+	font-size: 14px;
+	line-height: 18px;
+	color: rgba(255,255,255,0.50);
+	font-weight: 700;
+}
+footer .footerNote span {
+	color: rgba(255,255,255,0.50);
+	font-weight: 400;
+}
+
+/* Media query for Mobile devices*/
+@media only screen and (min-width : 285px) and (max-width : 480px) {
+/* Header */
+header {
+	width: 100%;
+	float: none;
+}
+header .profileLogo .logoPlaceholder {
+	display: inline-block;
+}
+header .profilePhoto {
+	display: inline-block;
+	margin-bottom: 10%;
+}
+header .installation {
+	display: inline-block;
+	height: 50px;	
+	padding-top: 50px;
+	margin-bottom: 50px;
+	}	
+header .profileHeader {
+	text-align: left;
+	margin-top: 15%;
+}
+header .profileHeader p {
+	text-align: justify;
+}
+.mainContent .socialNetworkNavBar {
+	text-align: left;
+	display: block;
+	margin-top: 60px;
+	margin-bottom: 15%;
+}
+.mainContent .socialNetworkNavBar .socialNetworkNav {
+	width: 60px;
+	height: 60px;
+	display: inline-block;
+	margin-right: 23px;
+}
+/* Main content sections */
+.mainContent .section1 {
+	text-align: center;
+	margin-bottom: 10%;
+}
+.section1 .section1Title, .section2 .section1Title {
+	text-align: center;
+}
+.section1 .sectionTitleRule, .section2 .sectionTitleRule {
+	width: 100%;
+}
+.section1 .sectionTitleRule2, .section2 .sectionTitleRule2 {
+	display: none;
+}
+.mainContent .section1 .section1Content {
+	display: inline-block;
+	text-align: left;
+	font-family: 'Rubik', sans-serif;
+	text-align: justify;
+}
+.mainContent .section2 {
+	display: block;
+	text-align: center;
+}
+.section2 .section2Content {
+	margin-top: 10%;
+	text-align: justify;
+	margin-bottom: 10%;
+}
+.mainContent .externalResourcesNav {
+	margin-bottom: 10%;
+}
+.mainContent .externalResourcesNav .externalResources {
+	width: 100%;
+	height: 35px;
+}
+/* Footer */
+footer {
+	display: block;
+	text-align: center;
+	font-family: 'Rubik', sans-serif;
+}
+}
+
+/* Media Query for Tablets */
+@media only screen and (min-width : 481px) and (max-width : 1024px) {
+/* Header */
+header {
+	width: 100%;
+	float: none;
+}
+header .profileLogo .logoPlaceholder {
+	display: inline-block;
+	font-family: 'Rubik', sans-serif;
+}
+header .profilePhoto {
+	float: left;
+	clear: both;
+	margin-right: 3%;
+	margin-top: 5%;
+}
+header .profileHeader {
+	text-align: left;
+	margin-top: 7%;
+}
+.mainContent .socialNetworkNavBar .socialNetworkNav {
+	width: 74px;
+	height: 74px;
+	display: inline-block;
+	margin-right: 23px;
+}
+/* Main content and sections */
+.section1 .section1Title, .section2 .section1Title {
+	text-align: center;
+}
+.section1 .sectionTitleRule, .section2 .sectionTitleRule {
+	width: 100%;
+}
+.section1 .sectionTitleRule2, .section2 .sectionTitleRule2 {
+	display: none;
+}
+.mainContent .section1 .section1Content {
+	display: block;
+	margin: 0% 0% 0% 20%;
+	font-family: 'Rubik', sans-serif;
+	margin-top: 5%;
+	margin-bottom: 5%;
+}
+.mainContent .section2 {
+	clear: both;
+}
+.section2 .section2Content {
+	padding: 0px;
+	margin-left: 20%;
+	font-family: 'Rubik', sans-serif;
+	margin-top: 5%;
+	margin-bottom: 5%;
+}
+.mainContent .externalResourcesNav {
+	margin-left: 20%;
+	margin-top: 40px;
+	margin-bottom: 40px;
+	text-align: center;
+	padding-top: 0px;
+	clear: both;
+}
+.mainContent .externalResourcesNav .externalResources {
+	width: 199px;
+	height: 48px;
+	margin-top: 5%;
+}
+/* Footer */
+footer .footerDisclaimer {
+	float: left;
+	margin-left: 3%;
+	font-family: 'Rubik', sans-serif;
+}
+footer .footerNote {
+	float: right;
+	margin-right: 3%;
+	font-family: 'Rubik', sans-serif;
+}
+}
+
+/* Desktops and laptops  */
+@media only screen and (min-width:1025px) {
+/* Header */
+header .profileLogo .logoPlaceholder {
+	float: left;
+	margin-bottom: 50px;
+}
+header .profilePhoto {
+	float: left;
+	clear: both;
+	margin-right: 3%;
+}
+header .profileHeader {
+	text-align: left;
+}
+.mainContent .socialNetworkNavBar .socialNetworkNav {
+	width: 74px;
+	height: 74px;
+	display: inline-block;
+	margin-right: 23px;
+}
+/* Main content sections */
+.section1 .sectionTitleRule, .section2 .sectionTitleRule {
+	width: 22.5%;
+}
+.mainContent .section1 .section1Content {
+	display: block;
+	margin-top: 0%;
+	margin-right: 0%;
+	margin-left: 26%;
+	margin-bottom: 0%;
+	font-family: 'Rubik', sans-serif;
+}
+.mainContent .section2 {
+	clear: both;
+}
+.section2 .section2Content {
+	padding: 0px;
+	margin-left: 26%;
+	font-family: 'Rubik', sans-serif;
+}
+.mainContent .externalResourcesNav {
+	margin-top: 40px;
+	margin-bottom: 40px;
+	text-align: center;
+	padding-top: 0px;
+	clear: both;
+}
+.mainContent .externalResourcesNav .externalResources {
+	width: 199px;
+	height: 48px;
+}
+/* Footer */
+footer .footerDisclaimer {
+	float: left;
+	margin-left: 3%;
+	font-family: 'Rubik', sans-serif;
+}
+footer .footerNote {
+	float: right;
+	margin-right: 3%;
+	font-family: 'Rubik', sans-serif;
+}
 }
 
 .solid {border-style: solid;}
 .dotted {border-style: dotted;}
+
+#player {
+    position:relative;
+    top:10px;
+    width:220px;
+    overflow: hidden;
+    direction: ltl;
+    border-top-right-radius: 0.5em 0.5em;
+    border-bottom-right-radius: 1em 0.7em;
+}
