--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,17 +1,19 @@
 doctype html
 html(lang='en')
-  head
-    title= title
+  head    
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css')
-    script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js')
-    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
+    title The Flamekeeper | Metropolis Ensemble 
+    link(rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,500;0,700;0,900;1,300;1,500;1,700;1,900&display=swap')
+    link(rel='stylesheet' href='/stylesheets/style.css')        
+    
+
+    script.
+      var __adobewebfontsappname__='dreamweaver'         
     script(src='https://sdk.amazonaws.com/js/aws-sdk-2.685.0.min.js')
     script(src='https://unpkg.com/wavesurfer.js')
-    link(rel='stylesheet', href='/stylesheets/style.css')
-  body
-    div(class='container')               
-      block content
+    
+  body(class='css-selector')                 
+    block content
     
           
