--- a/views/layout.pug
+++ b/views/layout.pug
@@ -12,6 +12,7 @@ html(lang='en')
       var __adobewebfontsappname__='dreamweaver'         
     script(src='https://sdk.amazonaws.com/js/aws-sdk-2.685.0.min.js')
     script(src='https://unpkg.com/wavesurfer.js')
+    script(src='https://unpkg.com/wavesurfer.js/dist/plugin/wavesurfer.regions.min.js')
     
   body(class='css-selector')                 
     block content
