--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -393,7 +393,7 @@ footer .footerNote {
 @media only screen and (min-width:1025px) {
 /* Header */
 header .profileLogo .logoPlaceholder {
-	float: left;
+	float: center;
 	margin-bottom: 50px;
 }
 header .profilePhoto {
