--- a/views/index.pug
+++ b/views/index.pug
@@ -92,15 +92,21 @@ block content
       span Email / Social
   
   script.
+      //- setTimeout(function () {
+      //- if(window.location.hash != '#r') {
+      //-     window.location.hash = 'r';
+      //-     window.location.reload(1);
+      //-   }
+      //- }, 2000);  // After 5 secs
  
 
-      let returns0 = `!{JSON.stringify(fileInfo.Contents[0].Key)}`;
-      let returns1 = `!{JSON.stringify(fileInfo.Contents[1].Key)}`;
-      let returns2 = `!{JSON.stringify(fileInfo.Contents[2].Key)}`;
-      let returns3 = `!{JSON.stringify(fileInfo.Contents[3].Key)}`;
-      let returns4 = `!{JSON.stringify(fileInfo.Contents[4].Key)}`;
-      let returns5 = `!{JSON.stringify(fileInfo.Contents[5].Key)}`;
-      let returns6 = `!{JSON.stringify(fileInfo.Contents[6].Key)}`;
+      let returns0 = `!{JSON.stringify(fileInfo.Contents[1].Key)}`;
+      let returns1 = `!{JSON.stringify(fileInfo.Contents[2].Key)}`;
+      let returns2 = `!{JSON.stringify(fileInfo.Contents[3].Key)}`;
+      let returns3 = `!{JSON.stringify(fileInfo.Contents[4].Key)}`;
+      let returns4 = `!{JSON.stringify(fileInfo.Contents[5].Key)}`;
+      let returns5 = `!{JSON.stringify(fileInfo.Contents[6].Key)}`;
+      let returns6 = `!{JSON.stringify(fileInfo.Contents[7].Key)}`;
       console.log(returns0, returns1, returns2, returns3, returns4, returns5, returns6);
       
       function startAudio() {
