--- a/views/uploadForm.pug
+++ b/views/uploadForm.pug
@@ -8,26 +8,47 @@ block content
     div(class="solid")
       p UPLOAD YOUR FILE:
       form(method="POST" action="/upload" id="uploadForm" encType="multipart/form-data" target="_blank")                 
-        input(type="file" name="theUpload" id="uploadValue")                                          
+        input(type="file" name="theUpload" id="uploadValue" onChange="disableSubmit()" accept="audio/mp3")                                          
         input(type="submit" form="uploadForm" id="uploadButton" value="UPLOAD" onclick="return redirect()")  
         
   br
   br
 
   script.
-    function redirect() {
+    
+               
+    
+
+    document.getElementById("uploadButton").disabled = true;
+    document.getElementById("uploadValue").disabled = false;
+
+
+    function disableSubmit() {
       let x = document.getElementById('uploadValue');
-      let y = x.value;            
-      let lastFour = y.substr(y.length - 4); // => ".mp3"            
-      
-      
-      
-      let fi = document.getElementById('uploadValue'); // GET THE FILE INPUT.
+      let y = x.value; 
+      let lastFour = y.substr(y.length - 4); // => ".mp3"
+      if (y == null || lastFour != '.mp3') {
+        console.log(lastFour);
+        document.getElementbyId("uploadValue").disabled = true;        
+        document.getElementById("uploadButton").disabled = true;        
+      } else {
+        
+        document.getElementById("uploadButton").disabled = false;
+        console.log(lastFour);
+      }}
+    
+    function redirect() {                 
+      let x = document.getElementById('uploadValue');
+      let y = x.value; 
+      let lastFour = y.substr(y.length - 4); // => ".mp3"                         
       let fsize = x.files.item(0).size;
             
       if (lastFour == '.mp3' && fsize < 209731438) {
-        setTimeout(function(){ document.getElementById("uploadButton").disabled = true }, 1999);
-        setTimeout(function(){ window.open('/dashboard'); }, 2000);                
+        setTimeout(function(){ document.getElementById("uploadButton").disabled = true }, 10);
+        setTimeout(function(){ window.open('/dashboard'); }, 10000);
+        elm = document.createElement('p');
+        elm.innerHTML = 'PLEASE WAIT...The file is uploading (this can take up to 10 seconds)...';
+        document.body.appendChild(elm);                        
       } else {
         alert('File must be an .mp3!')
       }          
