--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -12,58 +12,69 @@ block content
     - let returns = fileInfo.Contents
     - let lastUpload = returns[returns.length - 1];    
     - let returnsReversed = returns.reverse()    
-    - let files = returnsReversed.slice(1,8);                          
-                        
-    div
-      - let x = 1;   
-      each file in files ? files : ['NO!!!']        
-        - x++        
-        - let audioSrc = `https://fk-audio.s3.amazonaws.com/${file.Key}`                            
-        div(class="solid")
-          form(method="POST" action=`/replace/${file.Key}?_method=PUT` id=`launchForm${x}` encType="multipart/form-data")                                
-            p= file.Key
-            p= file.LastModified
-            ol(class="listy" id=file.Key)  
-              div(id="player")          
-                audio(id=`${x}` loop controls type="audio/mpeg" src=audioSrc class="audioElement")
-                br
-                a(href="#" onclick=`document.getElementById(${x}).muted = true;`) MUTE -- 
-                a(href="#" onclick=`document.getElementById(${x}).muted = false;`) -- UNMUTE
-          br                                
-          input(type="submit" form=`launchForm${x}` value="REPLACE")
-          br
+    - let files = returnsReversed.slice(1,8);
+
+    - let lastReplace = parseInt(returns[returns.length - 1].Key.substr(1,12));
+    - let nowCutString = Date.now().toString().substr(1,12);
+    - let nowCut = parseInt(nowCutString) - 25200000;
+    - let dontRenderIt = lastReplace > nowCut;      
+    - console.log(nowCut);
+    - console.log(dontRenderIt);                    
+
+    if dontRenderIt || global.upLoadLock == 2
+      h1 No Guy!
+    else                    
+      div
+        - let x = 1;   
+        each file in files ? files : ['NO!!!']       
+          - x++        
+          - let audioSrc = `https://fk-audio.s3.amazonaws.com/${file.Key}`                            
+          div(class="solid")
+            form(method="POST" action=`/replace/${file.Key}?_method=PUT` id=`launchForm${x}` encType="multipart/form-data")                                
+              p= file.Key
+              p= file.LastModified
+              ol(class="listy" id=file.Key)  
+                div(id="player")          
+                  audio(id=`${x}` loop controls type="audio/mpeg" src=audioSrc class="audioElement")
+                  br
+                  a(href="#" onclick=`document.getElementById(${x}).muted = true;`) MUTE -- 
+                  a(href="#" onclick=`document.getElementById(${x}).muted = false;`) -- UNMUTE
+            br                                
+            input(type="submit" form=`launchForm${x}` value="REPLACE")
+            br
+            br      
+    
+    
+      - let uploadSrc = `https://fk-audio.s3.amazonaws.com/${lastUpload.Key}`
+      br
+      br
+      br
+      if global.uploadLock == 2
+        div(class="dotted")
+          p LAST FILE YOU UPLOADED:
+          p= lastUpload.Key
+          audio(controls loop type="audio/mpeg" src=uploadSrc id="toDelete")       
           br      
-    
-    
-    - let uploadSrc = `https://fk-audio.s3.amazonaws.com/${lastUpload.Key}`
-    br
-    br
-    br
-    div(class="dotted")
-      p LAST FILE YOU UPLOADED:
-      p= lastUpload.Key
-      audio(controls loop type="audio/mpeg" src=uploadSrc id="toDelete")       
-      br      
-      form(method="POST" action=`/delete/${lastUpload.Key}` id="deleteForm" encType="multipart/form-data")                                        
-      input(type="submit" form="deleteForm" value="UNDO" onclick="setTimeout(function(){var ww = window.open('/uploadForm', '_blank'); ww.close(); }, 1000);")      
+          form(method="POST" action=`/delete/${lastUpload.Key}` id="deleteForm" encType="multipart/form-data")                                        
+          input(type="submit" form="deleteForm" value="UNDO" onclick="setTimeout(function(){var ww = window.open('/uploadForm', '_blank'); ww.close(); }, 1000);")      
     
 
-    script.
-      let x = document.getElementById('toDelete');
-      let srcString = x.src;
-      let snapshot = srcString.substring(48, 54); // => ".mp3"
-      console.log(snapshot);
-       
-               
-      function checkChecks(){
-      // Query for only the checked checkboxes and put the result in an array
-      let checked = Array.prototype.slice.call(document.querySelectorAll("input[type='checkbox']:checked"));      
-      // Loop over the array and inspect contents
-      checked.forEach(function(cb){
-        persistData = cb.parentNode.id;        
-        });
-      console.log(persistData);
-      };
+      script.
+        let x = document.getElementById('toDelete');
+        let srcString = x.src;
+        let snapshot = srcString.substring(48, 54); // => ".mp3"
+        console.log(snapshot);
+        
+                
+        function checkChecks(){
+        // Query for only the checked checkboxes and put the result in an array
+        let checked = Array.prototype.slice.call(document.querySelectorAll("input[type='checkbox']:checked"));      
+        // Loop over the array and inspect contents
+        checked.forEach(function(cb){
+          persistData = cb.parentNode.id;        
+          });
+        console.log(persistData);
+        };
       
       
           
