--- a/views/uploadForm.pug
+++ b/views/uploadForm.pug
@@ -51,7 +51,7 @@ block content
           elm.innerHTML = 'PLEASE WAIT...The file is uploading (this can take up to 10 seconds)...';
           document.body.appendChild(elm);                        
         } else {
-          alert('File must be an .mp3!')
+          alert('File must be an .mp3! or it is too large!')
         }          
       }
     
